# formula

./: .gitignore  Cargo.toml  Makefile  README.md
bot/: Cargo.toml
bot/src/: calc.rs  config.rs  csv_processor.rs  file_handler.rs  formatter.rs  handlers.rs  main.rs  material_parser.rs  order.rs  order_sheet.rs  registry.rs  state.rs  telegram.rs  xlsx_processor.rs  xlsx_processor_tests.rs
examples/: sample.csv  sample.tsv
src/: main.rs
